--- a/requirements.txt
+++ b/requirements.txt
@@ -71,9 +71,9 @@ sympy==1.13.1
 tenacity==9.0.0
 tokenizers==0.21.1
 toml==0.10.2
-torch==2.6.0+cu118
-torchaudio==2.6.0+cu118
-torchvision==0.21.0+cu118
+torch==2.6.0
+torchaudio==2.6.0
+torchvision==0.21.0
 tornado==6.4.2
 tqdm==4.67.1
 transformers==4.49.0
